# games101-cgl

./: .clang-format  CMakeLists.txt  license  vcpkg.json
cmake/: CGLConfig.cmake.in  games101-cglConfig.cmake.in
include/: base64.h  color.h  common.h  complex.h  matrix3x3.h  matrix4x4.h  osdtext.h  quaternion.h  renderer.h  tinyxml2.h  vector2D.h  vector3D.h  vector4D.h  viewer.h
src/: osdfont.cpp  osdtext.cpp
